--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -23,28 +23,56 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">SemWeb</a>
+                    <a class="navbar-brand">Semantisk Web</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
+                        <li data-ng-class="{active: tab === 'oppskrifter'}" data-ng-click="tab = 'oppskrifter'"><a>Oppskrifter</a></li>
+                        <li data-ng-class="{active: tab === 'dbpedia'}" data-ng-click="tab = 'dbpedia'"><a>dbpedia</a></li>
                     </ul>
-                    <form class="navbar-form navbar-right" role="search">
-                        <input type="text" class="form-control" placeholder="Search">
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
                 </div>
             </div>
         </nav>
 
-        <div class="container-fluid">
-            <h1 class="text-center">Søk i <a href="http://wiki.dbpedia.org/OnlineAccess#h28-6" target="_blank">dbpedia</a></h1>
+        <div class="container-fluid" data-ng-show="tab === 'oppskrifter'">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Oppskrifter</div>
+                    <div class="list-group">
+                        <a class="list-group-item" data-ng-repeat="recipe in recipes" data-ng-class="{active: recipe.tittel === selectedRecipe.tittel}"
+                           data-ng-click="selectRecipe(recipe)">{{recipe.tittel}}</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <ul class="list-group">
+                    <li class="list-group-item" data-ng-repeat="ingredient in selectedRecipe.innhold" data-ng-click="visible = !visible">
+                        <h4 class="text-center"><strong>{{ingredient.navn}}, {{ingredient.mengde}}{{ingredient.enhet}}</strong></h4>
+                        <table class="table well table-striped table-condensed" data-ng-hide="!visible">
+                            <thead>
+                                <tr>
+                                    <th class="text-right">Navn</th>
+                                    <th>Innhold pr. 100g</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr data-ng-repeat="nutrient in ingredient.nutrients | orderBy: 'mengde':true">
+                                    <td class="text-right">{{nutrient.navn}}</td>
+                                    <td>{{nutrient.mengde}} {{nutrient.enhet}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container-fluid" data-ng-show="tab === 'dbpedia'">
             <div class="row">
                 <div class="col-md-6">
-                    <form class="" data-ng-submit="doQuery(query)">
+                    <form class="" data-ng-submit="doQuery(dbpediaQuery)">
                         <div class="form-group">
-                            <textarea class="form-control" data-ng-model="query" cols="80" rows="10"></textarea>
+                            <textarea class="form-control" data-ng-model="dbpediaQuery" cols="80" rows="10"></textarea>
                         </div>
                         <button class="form-control btn btn-primary" type="submit">Query</button>
                     </form>
